:sparkles: feat: integrate grpc validator and grpc gateway
