# api/go_load.swagger.json
@@ -1,30 +1,36 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "GoLoadService API",
-    "version": "1.0.0"
+    "title": "api/go_load.proto",
+    "version": "version not set"
   },
   "tags": [
     {
       "name": "GoLoadService"
     }
   ],
-  "consumes": ["application/json"],
-  "produces": ["application/json"],
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
   "paths": {
-    "/go_load.v1.GoLoadService/CreateAccount": {
+    "/go_load.GoLoadService/CreateAccount": {
       "post": {
         "operationId": "GoLoadService_CreateAccount",
         "responses": {
           "200": {
-            "description": "Account created successfully.",
+            "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/CreateAccountResponse"
+              "$ref": "#/definitions/go_loadCreateAccountResponse"
             }
           },
           "default": {
-            "description": "Error response",
-            "schema": { "$ref": "#/definitions/rpcStatus" }
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
           }
         },
         "parameters": [
@@ -32,47 +38,31 @@
             "name": "body",
             "in": "body",
             "required": true,
-            "schema": { "$ref": "#/definitions/CreateAccountRequest" }
+            "schema": {
+              "$ref": "#/definitions/go_loadCreateAccountRequest"
+            }
           }
         ],
-        "tags": ["GoLoadService"]
+        "tags": [
+          "GoLoadService"
+        ]
       }
     },
-    "/go_load.v1.GoLoadService/CreateSession": {
-      "post": {
-        "operationId": "GoLoadService_CreateSession",
-        "responses": {
-          "200": {
-            "description": "User logged in successfully.",
-            "schema": { "$ref": "#/definitions/CreateSessionResponse" }
-          },
-          "default": {
-            "description": "Error response",
-            "schema": { "$ref": "#/definitions/rpcStatus" }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": { "$ref": "#/definitions/CreateSessionRequest" }
-          }
-        ],
-        "tags": ["GoLoadService"]
-      }
-    },
-    "/go_load.v1.GoLoadService/CreateDownloadTask": {
+    "/go_load.GoLoadService/CreateDownloadTask": {
       "post": {
         "operationId": "GoLoadService_CreateDownloadTask",
         "responses": {
           "200": {
-            "description": "Download task created successfully.",
-            "schema": { "$ref": "#/definitions/CreateDownloadTaskResponse" }
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/go_loadCreateDownloadTaskResponse"
+            }
           },
           "default": {
-            "description": "Error response",
-            "schema": { "$ref": "#/definitions/rpcStatus" }
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
           }
         },
         "parameters": [
@@ -80,23 +70,32 @@
             "name": "body",
             "in": "body",
             "required": true,
-            "schema": { "$ref": "#/definitions/CreateDownloadTaskRequest" }
+            "schema": {
+              "$ref": "#/definitions/go_loadCreateDownloadTaskRequest"
+            }
           }
         ],
-        "tags": ["GoLoadService"]
+        "tags": [
+          "GoLoadService"
+        ]
       }
     },
-    "/go_load.v1.GoLoadService/GetDownloadTaskList": {
+    "/go_load.GoLoadService/CreateSession": {
       "post": {
-        "operationId": "GoLoadService_GetDownloadTaskList",
+        "summary": "Create a client-side session when user logs in -- returns a token for further requests",
+        "operationId": "GoLoadService_CreateSession",
         "responses": {
           "200": {
-            "description": "List of download tasks.",
-            "schema": { "$ref": "#/definitions/GetDownloadTaskListResponse" }
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/go_loadCreateSessionResponse"
+            }
           },
           "default": {
-            "description": "Error response",
-            "schema": { "$ref": "#/definitions/rpcStatus" }
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
           }
         },
         "parameters": [
@@ -104,47 +103,31 @@
             "name": "body",
             "in": "body",
             "required": true,
-            "schema": { "$ref": "#/definitions/GetDownloadTaskListRequest" }
+            "schema": {
+              "$ref": "#/definitions/go_loadCreateSessionRequest"
+            }
           }
         ],
-        "tags": ["GoLoadService"]
+        "tags": [
+          "GoLoadService"
+        ]
       }
     },
-    "/go_load.v1.GoLoadService/UpdateDownloadTask": {
-      "post": {
-        "operationId": "GoLoadService_UpdateDownloadTask",
-        "responses": {
-          "200": {
-            "description": "Download task updated successfully.",
-            "schema": { "$ref": "#/definitions/UpdateDownloadTaskResponse" }
-          },
-          "default": {
-            "description": "Error response",
-            "schema": { "$ref": "#/definitions/rpcStatus" }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": { "$ref": "#/definitions/UpdateDownloadTaskRequest" }
-          }
-        ],
-        "tags": ["GoLoadService"]
-      }
-    },
-    "/go_load.v1.GoLoadService/DeleteDownloadTask": {
+    "/go_load.GoLoadService/DeleteDownloadTask": {
       "post": {
         "operationId": "GoLoadService_DeleteDownloadTask",
         "responses": {
           "200": {
-            "description": "Download task deleted successfully.",
-            "schema": { "$ref": "#/definitions/DeleteDownloadTaskResponse" }
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/go_loadDeleteDownloadTaskResponse"
+            }
           },
           "default": {
-            "description": "Error response",
-            "schema": { "$ref": "#/definitions/rpcStatus" }
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
           }
         },
         "parameters": [
@@ -152,23 +135,40 @@
             "name": "body",
             "in": "body",
             "required": true,
-            "schema": { "$ref": "#/definitions/DeleteDownloadTaskRequest" }
+            "schema": {
+              "$ref": "#/definitions/go_loadDeleteDownloadTaskRequest"
+            }
           }
         ],
-        "tags": ["GoLoadService"]
+        "tags": [
+          "GoLoadService"
+        ]
       }
     },
-    "/go_load.v1.GoLoadService/GetDownloadTaskFile": {
+    "/go_load.GoLoadService/GetDownloadTaskFile": {
       "post": {
         "operationId": "GoLoadService_GetDownloadTaskFile",
         "responses": {
           "200": {
-            "description": "Stream file content.",
-            "schema": { "$ref": "#/definitions/GetDownloadTaskFileResponse" }
+            "description": "A successful response.(streaming responses)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "result": {
+                  "$ref": "#/definitions/go_loadGetDownloadTaskFileResponse"
+                },
+                "error": {
+                  "$ref": "#/definitions/rpcStatus"
+                }
+              },
+              "title": "Stream result of go_loadGetDownloadTaskFileResponse"
+            }
           },
           "default": {
-            "description": "Error response",
-            "schema": { "$ref": "#/definitions/rpcStatus" }
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
           }
         },
         "parameters": [
@@ -176,147 +176,318 @@
             "name": "body",
             "in": "body",
             "required": true,
-            "schema": { "$ref": "#/definitions/GetDownloadTaskFileRequest" }
+            "schema": {
+              "$ref": "#/definitions/go_loadGetDownloadTaskFileRequest"
+            }
           }
         ],
-        "tags": ["GoLoadService"]
+        "tags": [
+          "GoLoadService"
+        ]
+      }
+    },
+    "/go_load.GoLoadService/GetDownloadTaskList": {
+      "post": {
+        "operationId": "GoLoadService_GetDownloadTaskList",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/go_loadGetDownloadTaskListResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/go_loadGetDownloadTaskListRequest"
+            }
+          }
+        ],
+        "tags": [
+          "GoLoadService"
+        ]
+      }
+    },
+    "/go_load.GoLoadService/UpdateDownloadTask": {
+      "post": {
+        "summary": "Update only when in PENDING status",
+        "operationId": "GoLoadService_UpdateDownloadTask",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/go_loadUpdateDownloadTaskResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/go_loadUpdateDownloadTaskRequest"
+            }
+          }
+        ],
+        "tags": [
+          "GoLoadService"
+        ]
       }
     }
   },
   "definitions": {
-    "CreateAccountRequest": {
+    "go_loadCreateAccountRequest": {
       "type": "object",
       "properties": {
-        "username": { "type": "string" },
-        "password": { "type": "string" }
-      }
-    },
-    "CreateAccountResponse": {
-      "type": "object",
-      "properties": { "userId": { "type": "string", "format": "uint64" } }
-    },
-    "CreateSessionRequest": {
-      "type": "object",
-      "properties": {
-        "username": { "type": "string" },
-        "password": { "type": "string" }
-      }
-    },
-    "CreateSessionResponse": {
-      "type": "object",
-      "properties": { "token": { "type": "string" } }
-    },
-    "CreateDownloadTaskRequest": {
-      "type": "object",
-      "properties": {
-        "token": { "type": "string" },
-        "downloadType": { "$ref": "#/definitions/DownloadType" },
-        "fileUrl": { "type": "string" }
-      }
-    },
-    "CreateDownloadTaskResponse": {
-      "type": "object",
-      "properties": { "downloadTask": { "$ref": "#/definitions/DownloadTask" } }
-    },
-    "GetDownloadTaskListRequest": {
-      "type": "object",
-      "properties": {
-        "token": { "type": "string" },
-        "offset": { "type": "string", "format": "uint64" },
-        "limit": { "type": "string", "format": "uint64" }
-      }
-    },
-    "GetDownloadTaskListResponse": {
-      "type": "object",
-      "properties": {
-        "downloadTaskList": {
-          "type": "array",
-          "items": { "$ref": "#/definitions/DownloadTask" }
+        "username": {
+          "type": "string"
         },
-        "totalDownloadTaskCount": { "type": "string", "format": "uint64" }
+        "password": {
+          "type": "string"
+        }
       }
     },
-    "UpdateDownloadTaskRequest": {
+    "go_loadCreateAccountResponse": {
       "type": "object",
       "properties": {
-        "token": { "type": "string" },
-        "downloadTaskId": { "type": "string", "format": "uint64" },
-        "fileUrl": { "type": "string" }
+        "userId": {
+          "type": "string",
+          "format": "uint64"
+        }
       }
     },
-    "UpdateDownloadTaskResponse": {
-      "type": "object",
-      "properties": { "downloadTask": { "$ref": "#/definitions/DownloadTask" } }
-    },
-    "DeleteDownloadTaskRequest": {
+    "go_loadCreateDownloadTaskRequest": {
       "type": "object",
       "properties": {
-        "token": { "type": "string" },
-        "downloadTaskId": { "type": "string", "format": "uint64" }
+        "token": {
+          "type": "string"
+        },
+        "downloadType": {
+          "$ref": "#/definitions/go_loadDownloadType"
+        },
+        "fileUrl": {
+          "type": "string"
+        }
       }
     },
-    "DeleteDownloadTaskResponse": { "type": "object" },
-    "GetDownloadTaskFileRequest": {
+    "go_loadCreateDownloadTaskResponse": {
       "type": "object",
       "properties": {
-        "token": { "type": "string" },
-        "downloadTaskId": { "type": "string", "format": "uint64" }
+        "downloadTask": {
+          "$ref": "#/definitions/go_loadDownloadTask"
+        }
       }
     },
-    "GetDownloadTaskFileResponse": {
+    "go_loadCreateSessionRequest": {
       "type": "object",
       "properties": {
-        "fileContent": { "type": "string", "format": "byte" }
+        "username": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
       }
     },
-    "DownloadTask": {
+    "go_loadCreateSessionResponse": {
       "type": "object",
       "properties": {
-        "id": { "type": "string", "format": "uint64" },
-        "ofUser": { "$ref": "#/definitions/User" },
-        "downloadType": { "$ref": "#/definitions/DownloadType" },
-        "fileUrl": { "type": "string" },
-        "downloadStatus": { "$ref": "#/definitions/DownloadStatus" }
+        "user": {
+          "$ref": "#/definitions/go_loadUser"
+        },
+        "token": {
+          "type": "string"
+        }
       }
     },
-    "User": {
+    "go_loadDeleteDownloadTaskRequest": {
       "type": "object",
       "properties": {
-        "id": { "type": "string", "format": "uint64" },
-        "username": { "type": "string" }
+        "token": {
+          "type": "string"
+        },
+        "downloadTaskId": {
+          "type": "string",
+          "format": "uint64"
+        }
       }
     },
-    "DownloadType": {
-      "type": "string",
-      "enum": ["DOWNLOAD_TYPE_UNSPECIFIED", "DOWNLOAD_TYPE_HTTP"],
-      "default": "DOWNLOAD_TYPE_UNSPECIFIED"
+    "go_loadDeleteDownloadTaskResponse": {
+      "type": "object"
     },
-    "DownloadStatus": {
+    "go_loadDownloadStatus": {
       "type": "string",
       "enum": [
-        "DOWNLOAD_STATUS_UNSPECIFIED",
+        "DOWNLOAD_STATUS_UNDEFINED",
         "DOWNLOAD_STATUS_PENDING",
         "DOWNLOAD_STATUS_DOWNLOADING",
         "DOWNLOAD_STATUS_FAILED",
         "DOWNLOAD_STATUS_SUCCESS"
       ],
-      "default": "DOWNLOAD_STATUS_UNSPECIFIED"
+      "default": "DOWNLOAD_STATUS_UNDEFINED"
     },
-    "rpcStatus": {
+    "go_loadDownloadTask": {
       "type": "object",
       "properties": {
-        "code": { "type": "integer", "format": "int32" },
-        "message": { "type": "string" },
-        "details": {
+        "id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "ofUser": {
+          "$ref": "#/definitions/go_loadUser"
+        },
+        "downloadType": {
+          "$ref": "#/definitions/go_loadDownloadType"
+        },
+        "fileUrl": {
+          "type": "string"
+        },
+        "downloadStatus": {
+          "$ref": "#/definitions/go_loadDownloadStatus"
+        }
+      }
+    },
+    "go_loadDownloadType": {
+      "type": "string",
+      "enum": [
+        "DOWNLOAD_TYPE_UNDEFINED",
+        "DOWNLOAD_TYPE_HTTP"
+      ],
+      "default": "DOWNLOAD_TYPE_UNDEFINED",
+      "title": "- DOWNLOAD_TYPE_HTTP: Download via HTTP"
+    },
+    "go_loadGetDownloadTaskFileRequest": {
+      "type": "object",
+      "properties": {
+        "token": {
+          "type": "string"
+        },
+        "downloadTaskId": {
+          "type": "string",
+          "format": "uint64"
+        }
+      }
+    },
+    "go_loadGetDownloadTaskFileResponse": {
+      "type": "object",
+      "properties": {
+        "fileContent": {
+          "type": "string",
+          "format": "byte"
+        }
+      }
+    },
+    "go_loadGetDownloadTaskListRequest": {
+      "type": "object",
+      "properties": {
+        "token": {
+          "type": "string"
+        },
+        "offset": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "limit": {
+          "type": "string",
+          "format": "uint64"
+        }
+      }
+    },
+    "go_loadGetDownloadTaskListResponse": {
+      "type": "object",
+      "properties": {
+        "downloadTaskList": {
           "type": "array",
-          "items": { "$ref": "#/definitions/protobufAny" }
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/go_loadDownloadTask"
+          }
+        },
+        "totalDownloadTaskCount": {
+          "type": "string",
+          "format": "uint64"
+        }
+      }
+    },
+    "go_loadUpdateDownloadTaskRequest": {
+      "type": "object",
+      "properties": {
+        "token": {
+          "type": "string"
+        },
+        "downloadTaskId": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "fileUrl": {
+          "type": "string"
+        }
+      }
+    },
+    "go_loadUpdateDownloadTaskResponse": {
+      "type": "object",
+      "properties": {
+        "downloadTask": {
+          "$ref": "#/definitions/go_loadDownloadTask"
+        }
+      }
+    },
+    "go_loadUser": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "username": {
+          "type": "string"
         }
       }
     },
     "protobufAny": {
       "type": "object",
-      "properties": { "@type": { "type": "string" } },
+      "properties": {
+        "@type": {
+          "type": "string"
+        }
+      },
       "additionalProperties": {}
+    },
+    "rpcStatus": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "message": {
+          "type": "string"
+        },
+        "details": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/protobufAny"
+          }
+        }
+      }
     }
   }
 }
